# manatsu

./: .prettierignore  .prettierrc.json  Cargo.toml  README.md  eslint.config.js  global.d.ts  index.d.ts  mana.d.ts  manatsu.js  manatsu.ts  package.json  pnpm-lock.yaml  tsconfig.json
.husky/: pre-commit
crates/manatsu/: Cargo.toml  README.md
crates/manatsu-dev/: Cargo.toml
crates/manatsu-dev/src/: macros.rs  package.rs  prelude.rs  utils.rs
crates/manatsu-dev/src/command/: build.rs  plugin.rs  readme.rs  release.rs
crates/manatsu/src/: command.rs  main.rs  project.rs
crates/tauri-plugin-manatsu/: Cargo.toml  build.rs
crates/tauri-plugin-manatsu/permissions/: default.toml
crates/tauri-plugin-manatsu/permissions/autogenerated/: reference.md
crates/tauri-plugin-manatsu/permissions/autogenerated/commands/: set_default_vue_version.toml
crates/tauri-plugin-manatsu/permissions/schemas/: schema.json
crates/tauri-plugin-manatsu/src/: command.rs  error.rs  global.rs  lib.rs  log.rs
