[[bin]]
name = "mana-dev"
path = "src/main.rs"

[package]
name = "manatsu-dev"
version = "1.0.2"
publish = false

[package.edition]
workspace = true

[lints]
workspace = true

[dependencies]
anyhow = "1.0"
colored = "2.1"
convert_case = "0.6"
globset = "0.4"
itertools = "0.13"
regex = "1.10"
walkdir = "2.5"
natord = "1.0"

[dependencies.clap]
version = "4.5"
features = ["derive"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serde_json]
version = "1.0"
features = ["preserve_order"]

[dependencies.strum]
version = "0.26"
features = ["derive"]

[dependencies.reqwest]
version = "0.12"
features = ["gzip", "json", "rustls-tls"]

[dependencies.tokio]
version = "1.39"
features = ["macros", "process", "rt-multi-thread"]
