[package]
name = "manatsu"
version = "1.0.0-alpha.4"
description = "CLI tools for Manatsu"
readme = "README.md"
keywords = ["cli", "manatsu", "tauri", "template", "vue"]

[package.homepage]
workspace = true

[package.repository]
workspace = true

[package.authors]
workspace = true

[package.license]
workspace = true

[package.edition]
workspace = true

[package.rust-version]
workspace = true

[package.categories]
workspace = true

[lints]
workspace = true

[dependencies]
anyhow = "1.0"
bytes = "1.6"
chrono = "0.4"
futures = "0.3"
globset = "0.4"
inquire = "0.7"
itertools = "0.13"
regex = "1.10"
semver = "1.0"
taplo = "0.13"
walkdir = "2.5"
zip = "2.1"

[dependencies.clap]
version = "4.5"
features = ["derive"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serde_json]
version = "1.0"
features = ["preserve_order"]

[dependencies.toml]
version = "0.8"
features = ["preserve_order"]

[dependencies.reqwest]
version = "0.12"
features = ["brotli", "gzip", "json", "rustls-tls"]

[dependencies.tokio]
version = "1.39"
features = ["macros", "process", "rt-multi-thread"]
