[package]
name = "tauri-plugin-manatsu"
version = "0.13.1"
description = "Manatsu plugin for Tauri"
links = "tauri-plugin-manatsu"
keywords = ["manatsu", "plugin", "tauri", "tauri-plugin", "vue"]

[package.homepage]
workspace = true

[package.repository]
workspace = true

[package.authors]
workspace = true

[package.license]
workspace = true

[package.edition]
workspace = true

[package.rust-version]
workspace = true

[package.readme]
workspace = true

[package.categories]
workspace = true

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
serde_json = "1.0.120"
thiserror = "1.0.63"
tracing = "0.1.40"

[dependencies.sysinfo]
version = "0.30.13"
default-features = false

[dependencies.serde]
features = ["derive"]
version = "1.0.204"

[dependencies.tauri]
version = "2.0.0-beta.23"

[dependencies.tokio]
version = "1.38.1"
features = ["fs"]

[build-dependencies.tauri-plugin]
version = "2.0.0-beta.18"
features = ["build"]
