[package]
name = "tauri-plugin-manatsu"
version = "1.0.2"
description = "Manatsu plugin for Tauri"
links = "tauri-plugin-manatsu"
keywords = ["manatsu", "plugin", "tauri", "tauri-plugin", "vue"]

[package.homepage]
workspace = true

[package.repository]
workspace = true

[package.authors]
workspace = true

[package.license]
workspace = true

[package.edition]
workspace = true

[package.rust-version]
workspace = true

[package.readme]
workspace = true

[package.categories]
workspace = true

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
anyhow = "1.0"
chrono = "0.4"
serde_json = "1.0"
thiserror = "1.0"

[dependencies.sysinfo]
version = "0.31"
default-features = false
features = ["system"]

[dependencies.serde]
features = ["derive"]
version = "1.0"

[dependencies.tauri]
version = "=2.0.0-rc.0"

[dependencies.tracing]
version = "0.1"
optional = true

[build-dependencies.tauri-plugin]
version = "2.0.0-rc"
features = ["build"]

[features]
default = ["tracing"]
tracing = ["dep:tracing"]
